# testdifi

./: README.md
config/cert/: testdefi.org.key  testdefi.org.pem
testdefi-api/: Cargo.toml
testdefi-api/src/: db.rs  router.rs
testdefi-api/src/models/: frontend.rs  mod.rs
testdefi-api/src/service/: contracts.rs  forks.rs  meta.rs  mod.rs  trace.rs
testdefi-ui/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo  types.ts
testdefi-ui/.next/: build-manifest.json  prerender-manifest.json  routes-manifest.json  trace
testdefi-ui/.next/cache/: .rscinfo
testdefi-ui/.next/server/: _error.js  middleware-build-manifest.js  pages-manifest.json
testdefi-ui/.next/server/pages/: 404.js  _app.js  _document.js  _error.js  about.js  bridge.js  console.js  deploy.js  docs.js  faucet.js  forks.js  index.js  lending.js  pools.js  stablecoin.js  swap.js  yield-farming.js
testdefi-ui/.next/server/vendor-chunks/: @swc.js  next.js
testdefi-ui/.next/static/chunks/: _error.js  webpack.js
testdefi-ui/.next/static/development/: _buildManifest.js
testdefi-ui/.next/types/: routes.d.ts  validator.ts
testdefi-ui/components/: Footer.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
testdefi-ui/config/: nginx.conf
testdefi-ui/lib/: api.ts
testdefi-ui/pages/: about.tsx  audit.tsx  bridge.tsx  console.tsx  deploy.tsx  docs.tsx  faucet.tsx  flashloan.tsx  forks.tsx  gas.tsx  governance.tsx  history.tsx  index.tsx  lending.tsx  network.tsx  oracle.tsx  pools.tsx  stablecoin.tsx  swap.tsx  trace.tsx  wallet.tsx  yield-farming.tsx
(+182 files in other folders)
